# memory

./: .gitignore  README.md  SKILL.md  daemon.mjs  dream.mjs  index.mjs  install.sh  memory.mjs  package-lock.json  package.json  web.mjs
.github/workflows/: cli-release.yml  cli.yml  server-publish.yml  server.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: db.mjs  embed.mjs  ops.mjs  schema.sql
server/: Cargo.toml  Dockerfile
server/src/: main.rs
